Actuliazr incluir pagina principal

--- a/Pages/sitio/login.html
+++ b/Pages/sitio/login.html
@@ -32,11 +32,11 @@
                 <a href="#" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
-                <img src="../public/media/logo.jpg" alt="La Capuzzella Logo"
+                <img src="../public/img/logo.jpg" alt="La Capuzzella Logo"
                     class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
             </div>
             <div class="flex gap-6">
-                <a href="nosostros.php" class="font-bold hover:text-[#d4af37]">Nosotros</a>
+                <a href="nosotros.php" class="font-bold hover:text-[#d4af37]">Nosotros</a>
                 <a href="login.php" class="font-bold hover:text-[#d4af37]">Login</a>
             </div>
         </nav>
