Actulizar ubicacion de img y pages-sitio

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
             </div>
             <div class="flex gap-6">
-                <a href="views/sitio/nosotros.php" class="font-bold hover:text-[#d4af37]">Nosotros</a>
-                <a href="views/sitio/login.php" class="font-bold hover:text-[#d4af37]">Login</a>
+                <a href="Pages/sitio/nosotros.html" class="font-bold hover:text-[#d4af37]">Nosotros</a>
+                <a href="Pages/sitio/login.html" class="font-bold hover:text-[#d4af37]">Login</a>
             </div>
         </nav>
     </header>
