--- a/Pages/sitio/login.html
+++ b/Pages/sitio/login.html
@@ -28,7 +28,7 @@
     <header class="bg-[#212121] text-[#e0e0e0] py-4 px-6 flex justify-center items-center relative h-[100px]">
         <nav class="w-full max-w-[1200px] flex justify-between items-center flex-wrap gap-4">
             <div class="flex gap-6">
-                <a href="../index.php" class="font-bold hover:text-[#d4af37]">Inicio</a>
+                <a href="/index.php" class="font-bold hover:text-[#d4af37]">Inicio</a>
                 <a href="#" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
