--- a/Pages/sitio/login.html
+++ b/Pages/sitio/login.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Capuzzella - Iniciar Sesión</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script>
         tailwind.config = {
             theme: {
@@ -28,16 +32,16 @@
     <header class="bg-[#212121] text-[#e0e0e0] py-4 px-6 flex justify-center items-center relative h-[100px]">
         <nav class="w-full max-w-[1200px] flex justify-between items-center flex-wrap gap-4">
             <div class="flex gap-6">
-                <a href="/index.php" class="font-bold hover:text-[#d4af37]">Inicio</a>
+                <a href="../../index.html" class="font-bold hover:text-[#d4af37]">Inicio</a>
                 <a href="#" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
-                <img src="../public/img/logo.jpg" alt="La Capuzzella Logo"
+                <img src="../../public/img/logo.jpg" alt="La Capuzzella Logo"
                     class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
             </div>
             <div class="flex gap-6">
-                <a href="nosotros.php" class="font-bold hover:text-[#d4af37]">Nosotros</a>
-                <a href="login.php" class="font-bold hover:text-[#d4af37]">Login</a>
+                <a href="nosotros.html" class="font-bold hover:text-[#d4af37]">Nosotros</a>
+                <a href="login.html" class="font-bold hover:text-[#d4af37]">Login</a>
             </div>
         </nav>
     </header>
@@ -46,11 +50,16 @@
     <main class="bg-gradient-to-b from-[#212121] to-[#5c4b7d] px-6 py-16 min-h-[700px] flex justify-center items-start">
         <!-- Left Section -->
         <section class="w-full lg:w-1/2 text-center lg:text-left space-y-6 mb-10 lg:mb-0 px-4">
-            <p class="text-sm uppercase tracking-wider text-gray-400">INICIO &gt;<span class="mx-2 text-[#E9C89A]">INICIAR SESIÓN</span></p>
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight text-white">Bienvenido a <span class="text-[#E9C89A]">La Capuzzella</span></h1>
-            <p class="text-base sm:text-lg text-gray-300 max-w-md mx-auto lg:mx-0">Accede a tu cuenta para disfrutar de una experiencia personalizada y gestionar tus reservas de manera sencilla.</p>
-            <div class="mt-8 w-full max-w-sm mx-auto lg:mx-0 bg-[#2a2a4a] rounded-lg flex items-center justify-center h-64 border border-gray-700">
-                <img src="/placeholder.svg?height=200&width=300" alt="Placeholder" class="w-full h-full object-cover rounded-lg opacity-70">
+            <p class="text-sm uppercase tracking-wider text-gray-400">INICIO &gt;<span
+                    class="mx-2 text-[#E9C89A]">INICIAR SESIÓN</span></p>
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight text-white">Bienvenido a <span
+                    class="text-[#E9C89A]">La Capuzzella</span></h1>
+            <p class="text-base sm:text-lg text-gray-300 max-w-md mx-auto lg:mx-0">Accede a tu cuenta para disfrutar de
+                una experiencia personalizada y gestionar tus reservas de manera sencilla.</p>
+            <div
+                class="mt-8 w-full max-w-sm mx-auto lg:mx-0 bg-[#2a2a4a] rounded-lg flex items-center justify-center h-64 border border-gray-700">
+                <img src="public/img/placeholder.svg?height=200&width=300" alt="Placeholder"
+                    class="w-full h-full object-cover rounded-lg opacity-70">
             </div>
         </section>
 
@@ -58,21 +67,26 @@
         <section class="w-full max-w-md bg-white rounded-lg shadow-xl p-8 space-y-6 text-gray-800 mx-auto lg:mx-0">
             <h2 class="text-3xl font-bold text-center">Iniciar Sesión</h2>
             <p class="text-center text-gray-600">Accede a tu cuenta para continuar</p>
-            <form action="index.php" method="POST" class="space-y-5">
+            <form action="../../index.html" method="POST" class="space-y-5">
                 <div>
                     <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
                     <div class="relative">
-                        <input type="email" id="email" name="email" placeholder="tu@email.com" required class="w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#8a5cf6]">
-                        <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400" aria-hidden="true"><i class="fas fa-envelope"></i></span>
+                        <input type="email" id="email" name="email" placeholder="tu@email.com" required
+                            class="w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#8a5cf6]">
+                        <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
+                            aria-hidden="true"><i class="fas fa-envelope"></i></span>
                     </div>
                 </div>
 
                 <div>
                     <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Contraseña</label>
                     <div class="relative">
-                        <input type="password" id="password" name="password" placeholder="Tu contraseña" required class="w-full pl-10 pr-10 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#8a5cf6]">
-                        <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400" aria-hidden="true"><i class="fas fa-lock"></i></span>
-                        <span class="absolute right-3 top-1/2 transform -translate-y-1/2 cursor-pointer text-gray-400" id="togglePassword">
+                        <input type="password" id="password" name="password" placeholder="Tu contraseña" required
+                            class="w-full pl-10 pr-10 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#8a5cf6]">
+                        <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
+                            aria-hidden="true"><i class="fas fa-lock"></i></span>
+                        <span class="absolute right-3 top-1/2 transform -translate-y-1/2 cursor-pointer text-gray-400"
+                            id="togglePassword">
                             <i class="fas fa-eye"></i>
                         </span>
                     </div>
@@ -80,31 +94,37 @@
 
                 <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between text-sm gap-2">
                     <div class="flex items-center">
-                        <input type="checkbox" id="remember_me" name="remember_me" class="h-4 w-4 text-[#8a5cf6] border-gray-300 rounded focus:ring-[#8a5cf6]">
+                        <input type="checkbox" id="remember_me" name="remember_me"
+                            class="h-4 w-4 text-[#8a5cf6] border-gray-300 rounded focus:ring-[#8a5cf6]">
                         <label for="remember_me" class="ml-2 text-gray-700">Recordarme</label>
                     </div>
                     <a href="#" class="text-[#8a5cf6] hover:underline">¿Olvidaste tu contraseña?</a>
                 </div>
 
-                <button type="submit" class="w-full bg-[#967ed5] text-white py-2 rounded-md hover:bg-opacity-90 transition-colors font-semibold">
+                <button type="submit"
+                    class="w-full bg-[#967ed5] text-white py-2 rounded-md hover:bg-opacity-90 transition-colors font-semibold">
                     Iniciar Sesión
                 </button>
             </form>
 
             <p class="text-center text-sm text-gray-600">
-                ¿No tienes una cuenta? <a href="register.php" class="text-[#E9C89A] hover:underline font-medium">Regístrate aquí</a>
+                ¿No tienes una cuenta? <a href="register.html"
+                    class="text-[#E9C89A] hover:underline font-medium">Regístrate aquí</a>
             </p>
         </section>
     </main>
 
     <!-- Footer -->
     <footer class="bg-[#2a2a4a] py-16 px-6 text-center text-white mt-auto">
-        <h2 class="text-3xl font-bold mb-6 leading-snug">¿Listo para Vivir la Experiencia <span class="text-[#E9C89A]">La Capuzzella</span>?</h2>
+        <h2 class="text-3xl font-bold mb-6 leading-snug">¿Listo para Vivir la Experiencia <span
+                class="text-[#E9C89A]">La Capuzzella</span>?</h2>
         <div class="flex flex-col sm:flex-row gap-4 justify-center mt-6">
-            <button class="bg-[#967ed5] hover:bg-[#6a5acd] text-white px-6 py-3 rounded-md font-bold text-lg transition-colors">
+            <button
+                class="bg-[#967ed5] hover:bg-[#6a5acd] text-white px-6 py-3 rounded-md font-bold text-lg transition-colors">
                 Crear Cuenta
             </button>
-            <button class="border-2 border-[#e0e0e0] text-[#e0e0e0] px-6 py-3 rounded-md font-bold text-lg hover:bg-[#e0e0e0] hover:text-[#212121] transition-colors">
+            <button
+                class="border-2 border-[#e0e0e0] text-[#e0e0e0] px-6 py-3 rounded-md font-bold text-lg hover:bg-[#e0e0e0] hover:text-[#212121] transition-colors">
                 Ver Menú
             </button>
         </div>
