--- a/Pages/sitio/nosotros.html
+++ b/Pages/sitio/nosotros.html
@@ -27,16 +27,16 @@
     <header class="bg-[#212121] text-[#e0e0e0] py-4 px-6 flex justify-center items-center relative h-[100px]">
         <nav class="w-full max-w-[1200px] flex justify-between items-center flex-wrap gap-4">
             <div class="flex gap-6">
-                <a href="/index.html" class="font-bold hover:text-[#d4af37]">Inicio</a>
+                <a href="../../index.html" class="font-bold hover:text-[#d4af37]">Inicio</a>
                 <a href="#" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
-                <img src="../public/img/logo.jpg" alt="La Capuzzella Logo"
+                <img src="../../public/img/logo.jpg" alt="La Capuzzella Logo"
                     class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
             </div>
             <div class="flex gap-6">
-                <a href="nosotros.php" class="font-bold hover:text-[#d4af37]">Nosotros</a>
-                <a href="login.php" class="font-bold hover:text-[#d4af37]">Login</a>
+                <a href="nosotros.html" class="font-bold hover:text-[#d4af37]">Nosotros</a>
+                <a href="login.html" class="font-bold hover:text-[#d4af37]">Login</a>
             </div>
         </nav>
     </header>
@@ -49,7 +49,7 @@
                 <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight text-white py-5"><span class="text-[#E9C89A]">Sobre Nosotros</span></h1>
             </div>
             <div class="w-full max-w-xl aspect-[4/3]  flex items-center justify-center rounded-lg shadow-lg overflow-hidden">
-                <img src="../public/img/restaurant.jpg" alt="Placeholder image" class=" object-contain">
+                <img src="../../public/img/restaurant.jpg" alt="Placeholder image" class=" object-contain">
             </div>
         </div>
     </section>
@@ -58,7 +58,7 @@
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center gap-12">
             <div class="flex-1 flex justify-center md:justify-start order-2 md:order-1">
                 <div class="w-full max-w-md aspect-[4/3] flex items-center justify-center rounded-lg shadow-lg overflow-hidden">
-                    <img src="../public/img/experience.jpg" alt="Placeholder image" class="w-full h-full object-cover rounded-lg">
+                    <img src="../../public/img/experience.jpg" alt="Placeholder image" class="w-full h-full object-cover rounded-lg">
                 </div>
             </div>
             <div class="flex-1 order-1 md:order-2 text-center md:text-left">
@@ -110,8 +110,7 @@
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center gap-12">
             <div class="flex-1 flex justify-center md:justify-start">
                 <div class="w-full max-w-sm aspect-[4/3] flex items-center justify-center rounded-lg overflow-hidden">
-                    <img src="../public/img/logo.jpg" alt="La Capuzzella Logo"
-                        class="w-[280px] h-[280px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
+                    <img src="../../public/img/logo.jpg" alt="La Capuzzella Logo" class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
                 </div>
             </div>
             <div class="flex-1 text-center md:text-left">
@@ -152,7 +151,7 @@
             </p>
             <div class="flex flex-col items-center">
                 <div class="w-16 h-16 rounded-full bg-gray-300 flex items-center justify-center overflow-hidden mb-3">
-                    <img src="../public/img/user.png" alt="Marco Rossi Avatar" class="w-full h-full object-cover">
+                    <img src="../../public/img/user.png" alt="Marco Rossi Avatar" class="w-full h-full object-cover">
                 </div>
                 <p class="font-bold text-lg text-white">Marco Rossi</p>
                 <p class="text-sm opacity-90 text-[#E9C89A]">Cliente Regular</p>
@@ -164,7 +163,7 @@
         <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
             <div>
                 <div class="mb-4">
-                    <img src="../public/img/logo.jpg" alt="La Capuzzelle Footer Logo" class="h-20 w-auto">
+                    <img src="../../public/img/logo.jpg" alt="La Capuzzelle Footer Logo" class="h-20 w-auto">
                 </div>
                 <p class="text-sm text-[#E9C89A]">Auténtica cocina italiana en el corazón de la ciudad. Tradición, calidad y sabor en cada plato.</p>
             </div>
