--- a/Pages/sitio/register.html
+++ b/Pages/sitio/register.html
@@ -16,16 +16,16 @@
     <header class="bg-[#212121] text-[#e0e0e0] py-4 px-6 flex justify-center items-center relative h-[100px]">
         <nav class="w-full max-w-[1200px] flex justify-between items-center flex-wrap gap-4">
             <div class="flex gap-6">
-                <a href="/index.html" class="font-bold hover:text-[#d4af37]">Inicio</a>
+                <a href="../../index.html" class="font-bold hover:text-[#d4af37]">Inicio</a>
                 <a href="#" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
-                <img src="../public/img/logo.jpg" alt="La Capuzzella Logo"
+                <img src="../../public/img/logo.jpg" alt="La Capuzzella Logo"
                     class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
             </div>
             <div class="flex gap-6">
-                <a href="nosotros.php" class="font-bold hover:text-[#d4af37]">Nosotros</a>
-                <a href="login.php" class="font-bold hover:text-[#d4af37]">Login</a>
+                <a href="nosotros.html" class="font-bold hover:text-[#d4af37]">Nosotros</a>
+                <a href="login.html" class="font-bold hover:text-[#d4af37]">Login</a>
             </div>
         </nav>
     </header>
@@ -43,7 +43,7 @@
                 </p>
                 <div
                     class="bg-white/10 border border-white/20 rounded-lg p-8 shadow-lg max-w-[400px] mx-auto lg:mx-0 min-h-[250px] flex justify-center items-center">
-                    <img src="/placeholder.svg?height=200&width=300" alt="Placeholder Image" class="w-[100px] h-[100px] opacity-50" />
+                    <img src="../../public/img/experience.jpg" alt="Placeholder Image" class="w-[500px] h-[200px] opacity-50" />
                 </div>
             </div>
 
