--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         <nav class="w-full max-w-[1200px] flex justify-between items-center flex-wrap gap-4">
             <div class="flex gap-6">
                 <a href="index.php" class="font-bold hover:text-[#d4af37]">Inicio</a>
-                <a href="#" class="font-bold hover:text-[#d4af37]">Menú</a>
+                <a href="Pages/sitio/Menu/Menu.html" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
-                <img src="public/img/logo.jpg" alt="La Capuzzella Logo"
-                    class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
+                <img src="public/img/logo.jpg" alt="La Capuzzella Logo" class="w-[100px] h-[100px] rounded-full object-cover border-[2px] border-[#d4af37] p-1 bg-[#212121]" />
             </div>
             <div class="flex gap-6">
                 <a href="Pages/sitio/nosotros.html" class="font-bold hover:text-[#d4af37]">Nosotros</a>
@@ -48,7 +47,7 @@
                 <p class="text-sm tracking-widest uppercase mb-2 text-[#E9C89A]">Auténtica Cocina Italiana</p>
                 <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight text-white">Somos los <span class="text-[#E9C89A]">Mejores</span> Proveedores de <span class="text-[#E9C89A]">Sabor</span></h1>
                 <p class="text-lg text-[#E9C89A] mb-6">Descubre la auténtica cocina italiana en La Capuzzelle, donde cada plato cuenta una historia de tradición y pasión culinaria.</p>
-                <a href="#" class="inline-block bg-[#222] text-[#E9C89A] px-6 py-3 rounded hover:bg-black transition">Ver Menú</a>
+                <a href="Pages/sitio/Menu.html" class="inline-block bg-[#222] text-[#E9C89A] px-6 py-3 rounded hover:bg-black transition">Ver Menú</a>
             </div>
             <div class="w-[300px] h-[300px] rounded-full bg-black border-[5px] border-[#d4af37] shadow-2xl flex items-center justify-center mt-10 lg:mt-0 ml-0 lg:ml-12 overflow-hidden">
                 <img src="public/img/logo.jpg" alt="Logo grande" class="w-full h-full object-cover rounded-full" />
@@ -115,8 +114,8 @@
                 </div>
                 <p class="text-gray-700 mb-6">En La Capuzzella, trabajamos exclusivamente con proveedores certificados que comparten nuestra pasión por la calidad. Cada ingrediente es seleccionado cuidadosamente para garantizar la autenticidad de nuestros platos tradicionales italianos.</p>
                 <div class="flex gap-4">
-                    <a href="#" class="px-6 py-3 bg-[#967ed5] text-white font-semibold rounded-full hover:bg-[#c19e2b] transition">25+ Años</a>
-                    <a href="#" class="px-6 py-3 border border-[#E9C89A] text-[#E9C89A] font-semibold rounded-full hover:bg-[#E9C89A] hover:text-white transition">Conocer Más</a>
+                    <a class="px-6 py-3 bg-[#967ed5] text-white font-semibold rounded-full hover:bg-[#c19e2b] transition">25+ Años</a>
+                    <a href="Pages/sitio/nosotros.html" class="px-6 py-3 border border-[#E9C89A] text-[#E9C89A] font-semibold rounded-full hover:bg-[#E9C89A] hover:text-white transition">Conocer Más</a>
                 </div>
             </div>
         </div>
@@ -169,16 +168,15 @@
             <div>
                 <h4 class="text-lg font-semibold mb-4">Información</h4>
                 <ul class="space-y-2 text-[#E9C89A]">
-                    <li><a href="#" class="hover:underline">Sobre Nosotros</a></li>
-                    <li><a href="#" class="hover:underline">Nuestro Menú</a></li>
-                    <li><a href="#" class="hover:underline">Contacto</a></li>
+                    <li><a href="Pages/sitio/nosotros.html" class="hover:underline">Sobre Nosotros</a></li>
+                    <li><a href="Pages/sitio/Menu/Menu.html" class="hover:underline">Nuestro Menú</a></li>
                 </ul>
             </div>
             <div>
                 <h4 class="text-lg font-semibold mb-4">Mi Cuenta</h4>
                 <ul class="space-y-2 text-[#E9C89A]">
-                    <li><a href="#" class="hover:underline">Iniciar Sesión</a></li>
-                    <li><a href="#" class="hover:underline">Registrarse</a></li>
+                    <li><a href="Pages/sitio/login.html" class="hover:underline">Iniciar Sesión</a></li>
+                    <li><a href="Pages/sitio/register.html" class="hover:underline">Registrarse</a></li>
                 </ul>
             </div>
             <div>
