--- a/Pages/sitio/nosotros.html
+++ b/Pages/sitio/nosotros.html
@@ -28,7 +28,7 @@
         <nav class="w-full max-w-[1200px] flex justify-between items-center flex-wrap gap-4">
             <div class="flex gap-6">
                 <a href="../../index.html" class="font-bold hover:text-[#d4af37]">Inicio</a>
-                <a href="#" class="font-bold hover:text-[#d4af37]">Menú</a>
+                <a href="Menu/Menu.html" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
                 <img src="../../public/img/logo.jpg" alt="La Capuzzella Logo"
@@ -170,16 +170,15 @@
             <div>
                 <h4 class="text-lg font-semibold mb-4">Información</h4>
                 <ul class="space-y-2 text-[#E9C89A]">
-                    <li><a href="#" class="hover:underline">Sobre Nosotros</a></li>
-                    <li><a href="#" class="hover:underline">Nuestro Menú</a></li>
-                    <li><a href="#" class="hover:underline">Contacto</a></li>
+                    <li><a href="nosotros.html" class="hover:underline">Sobre Nosotros</a></li>
+                    <li><a href="Menu/Menu.html" class="hover:underline">Nuestro Menú</a></li>
                 </ul>
             </div>
             <div>
                 <h4 class="text-lg font-semibold mb-4">Mi Cuenta</h4>
                 <ul class="space-y-2 text-[#E9C89A]">
-                    <li><a href="#" class="hover:underline">Iniciar Sesión</a></li>
-                    <li><a href="#" class="hover:underline">Registrarse</a></li>
+                    <li><a href="login.html"hover:underline">Iniciar Sesión</a></li>
+                    <li><a href="register.html" class="hover:underline">Registrarse</a></li>
                 </ul>
             </div>
             <div>
