--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="bg-[#212121] text-[#e0e0e0] py-4 px-6 flex justify-center items-center relative h-[100px]">
         <nav class="w-full max-w-[1200px] flex justify-between items-center flex-wrap gap-4">
             <div class="flex gap-6">
-                <a href="index.php" class="font-bold hover:text-[#d4af37]">Inicio</a>
+                <a href="index.html" class="font-bold hover:text-[#d4af37]">Inicio</a>
                 <a href="Pages/sitio/Menu/Menu.html" class="font-bold hover:text-[#d4af37]">Menú</a>
             </div>
             <div class="absolute left-1/2 transform -translate-x-1/2">
@@ -36,7 +36,7 @@
             </div>
             <div class="flex gap-6">
                 <a href="Pages/sitio/nosotros.html" class="font-bold hover:text-[#d4af37]">Nosotros</a>
-                <a href="Pages/sitio/login.html" class="font-bold hover:text-[#d4af37]">Login</a>
+                <a href="Pages/sitio/login.php" class="font-bold hover:text-[#d4af37]">Login</a>
             </div>
         </nav>
     </header>
@@ -175,7 +175,7 @@
             <div>
                 <h4 class="text-lg font-semibold mb-4">Mi Cuenta</h4>
                 <ul class="space-y-2 text-[#E9C89A]">
-                    <li><a href="Pages/sitio/login.html" class="hover:underline">Iniciar Sesión</a></li>
+                    <li><a href="Pages/sitio/login.php" class="hover:underline">Iniciar Sesión</a></li>
                     <li><a href="Pages/sitio/register.html" class="hover:underline">Registrarse</a></li>
                 </ul>
             </div>
